--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "react-google-login": "^5.2.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "4.0.3",
     "rxjs": "^7.2.0",
     "yup": "^0.32.9"
   },
@@ -38,6 +38,8 @@
     ]
   },
   "devDependencies": {
+    "node-sass": "^6.0.0",
+    "sass-loader": "^12.0.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
