home page and header linking

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -25,6 +25,7 @@
     "rules": {
         "jsx-a11y/label-has-associated-control": [ 2, {
           "assert": "either"
-        }]
+        }],
+        "linebreak-style": 0
     }
 }
