--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "rxjs": "^7.2.0",
+    "socket.io-client": "^4.1.3",
     "yup": "^0.32.9"
   },
   "scripts": {
