--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "socket.io": "^4.1.3",
     "yup": "^0.32.9"
   },
   "devDependencies": {
