--- a/client/package.json
+++ b/client/package.json
@@ -46,5 +46,6 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "node-sass": "^6.0.0",
     "sass-loader": "^12.0.0"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
