--- a/client/package.json
+++ b/client/package.json
@@ -44,8 +44,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "node-sass": "^6.0.0",
-    "sass-loader": "^12.0.0"
+    "sass": "^1.37.5"
   },
   "proxy": "http://localhost:5000"
 }
